# cpp-template

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  doxygen.conf
source/: main.cpp
source/lib/: CMakeLists.txt
source/lib/include/lib/: lib.h
source/lib/src/: lib.cpp
tests/: CMakeLists.txt
tests/test_lib/: test_calculator.cpp
